Set MAVEN_OPTS
Signed-off-by: smlambert <slambert@gmail.com>