@@ -37,6 +37,10 @@ fi
 TEST_SUITE=$1
 java -version
 
+# See https://github.com/quarkusio/quarkus/blob/master/CONTRIBUTING.md#frequently-asked-questions
+# for advise to set MAVEN_OPTS to avoid https://cwiki.apache.org/confluence/display/MAVEN/OutOfMemoryError
+export MAVEN_OPTS="-Xmx1g -XX:MaxPermSize=128m"
+
 cd /quarkus
 
 pwd
